Issue 46 - Gaps between highlighted chrs

--- a/style/submissions_edit.css
+++ b/style/submissions_edit.css
@@ -68,11 +68,11 @@
 }
 
 .submissions-edit-character {
-  margin-left: 1px;
+  padding-left: 1px;
 }
 
 .submissions-edit-cursor + .submissions-edit-character {
-  margin-left: 0;
+  padding-left: 0;
 }
 
 .submissions-edit-cursor {
